# CassyInterface

./: .gitmodules  CMakeLists.txt  Cassy.cpp  Cassy.h  CurveGen.cpp  CurveGen.h  DataCapture.cpp  DataCapture.h  Gui.cpp  Gui.h  README.md  SerialPort.cpp  SerialPort.h  main.cpp
doxygen/: Doxyfile
doxygen/html/: Cassy_8h_source.html  CurveGen_8h_source.html  DataCapture_8h_source.html  Gui_8h_source.html  SerialPort_8h_source.html  annotated.html  classCassy-members.html  classCassy.html  classCurveGen.html  classDataCapture-members.html  classDataCapture.html  classGui-members.html  classGui.html  classSerialPort-members.html  classSerialPort.html  classes.html  files.html  graph_legend.html  index.html  md__home_nicholas_CLionProjects_CassyInterface_README.html  pages.html  stb__image_8h_source.html  structCassy_1_1relay-members.html  structCassy_1_1relay.html  structCassy_1_1voltage__channel-members.html  structCassy_1_1voltage__channel.html  structDataCapture_1_1DoubleCap-members.html  structDataCapture_1_1DoubleCap.html  structDataCapture_1_1FloatCap-members.html  structDataCapture_1_1FloatCap.html  structDataCapture_1_1IntCap-members.html  structDataCapture_1_1IntCap.html  structDataCapture_1_1Uint8__tCap-members.html  structDataCapture_1_1Uint8__tCap.html  structstbi__io__callbacks-members.html  structstbi__io__callbacks.html
doxygen/latex/: annotated.tex  classCassy.tex  classCurveGen.tex  classDataCapture.tex  classGui.tex  classSerialPort.tex  md__home_nicholas_CLionProjects_CassyInterface_README.tex  refman.tex  structCassy_1_1relay.tex  (+6 more)
(+20 files in other folders)
